# alethia

./: LICENSE  README.md  STUDY.md  pyproject.toml
.github/workflows/: tests.yml
alethia/: __init__.py  _book.py  _stats.py  calibration.py  gauntlet.py
examples/: demo.py
tests/: test_alethia.py
